# scaffai

./: .env.example  README.md  pyproject.toml
scaffai/: __init__.py  agent.py  cli.py  hil.py
scaffai/rules/: golang.txt  python.txt  typescript.txt
scaffai/snippets/golang/auth/: jwt.txt
scaffai/snippets/golang/db/: pgx.txt
scaffai/snippets/python/db/: sqlalchemy.txt
scaffai/snippets/typescript/db/: prisma.txt
